// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simpleHeatmap 1`] = `
{
  "annotation": {},
  "chartType": "heatmap",
  "config": {
    "heatmap": {
      "backgroundColor": "transparent",
      "cell": {
        "stroke": "#fff",
      },
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": true,
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "heatmap": {
        "backgroundColor": "transparent",
        "cell": {
          "stroke": "#fff",
        },
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": true,
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 10,
      "__Dim_Detail__": "A-goalProfit",
      "__Dim_X__": "2019",
      "__Dim_Y__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "goalProfit": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 10,
      "__Dim_Detail__": "A-profit",
      "__Dim_X__": "2019",
      "__Dim_Y__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 10,
      "__Dim_Detail__": "A-sales",
      "__Dim_X__": "2019",
      "__Dim_Y__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "sales": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 10,
      "__Dim_Detail__": "A-leftCount",
      "__Dim_X__": "2019",
      "__Dim_Y__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "leftCount": 1,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 10,
      "__Dim_Detail__": "A-salesCount",
      "__Dim_X__": "2019",
      "__Dim_Y__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "goalProfit": 10,
        "leftCount": 1,
        "profit": 10,
        "sales": 100,
        "salesCount": 100,
        "type": "A",
      },
      "date": "2019",
      "salesCount": 100,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-goalProfit",
      "__Dim_X__": "2020",
      "__Dim_Y__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-profit",
      "__Dim_X__": "2020",
      "__Dim_Y__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-sales",
      "__Dim_X__": "2020",
      "__Dim_Y__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 320,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "sales": 320,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-leftCount",
      "__Dim_X__": "2020",
      "__Dim_Y__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "leftCount": 2,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-salesCount",
      "__Dim_X__": "2020",
      "__Dim_Y__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 200,
      "__OriginalData__": {
        "date": "2020",
        "goalProfit": 30,
        "leftCount": 2,
        "profit": 30,
        "sales": 320,
        "salesCount": 200,
        "type": "A",
      },
      "date": "2020",
      "salesCount": 200,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-goalProfit",
      "__Dim_X__": "2021",
      "__Dim_Y__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "goalProfit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-profit",
      "__Dim_X__": "2021",
      "__Dim_Y__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "profit": 30,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-sales",
      "__Dim_X__": "2021",
      "__Dim_Y__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "sales": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-leftCount",
      "__Dim_X__": "2021",
      "__Dim_Y__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "leftCount": 3,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 30,
      "__Dim_Detail__": "A-salesCount",
      "__Dim_X__": "2021",
      "__Dim_Y__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 300,
      "__OriginalData__": {
        "date": "2021",
        "goalProfit": 30,
        "leftCount": 3,
        "profit": 30,
        "sales": 300,
        "salesCount": 300,
        "type": "A",
      },
      "date": "2021",
      "salesCount": 300,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 50,
      "__Dim_Detail__": "A-goalProfit",
      "__Dim_X__": "2022",
      "__Dim_Y__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "goalProfit": 50,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 50,
      "__Dim_Detail__": "A-profit",
      "__Dim_X__": "2022",
      "__Dim_Y__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "profit": 50,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 50,
      "__Dim_Detail__": "A-sales",
      "__Dim_X__": "2022",
      "__Dim_Y__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 240,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "sales": 240,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 50,
      "__Dim_Detail__": "A-leftCount",
      "__Dim_X__": "2022",
      "__Dim_Y__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "leftCount": 4,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 50,
      "__Dim_Detail__": "A-salesCount",
      "__Dim_X__": "2022",
      "__Dim_Y__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 400,
      "__OriginalData__": {
        "date": "2022",
        "goalProfit": 50,
        "leftCount": 4,
        "profit": 50,
        "sales": 240,
        "salesCount": 400,
        "type": "A",
      },
      "date": "2022",
      "salesCount": 400,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 40,
      "__Dim_Detail__": "A-goalProfit",
      "__Dim_X__": "2023",
      "__Dim_Y__": "A-goalProfit",
      "__MeaId__": "goalProfit",
      "__MeaName__": "goalProfit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "goalProfit": 40,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 40,
      "__Dim_Detail__": "A-profit",
      "__Dim_X__": "2023",
      "__Dim_Y__": "A-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "profit": 40,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 40,
      "__Dim_Detail__": "A-sales",
      "__Dim_X__": "2023",
      "__Dim_Y__": "A-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "sales": 500,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 40,
      "__Dim_Detail__": "A-leftCount",
      "__Dim_X__": "2023",
      "__Dim_Y__": "A-leftCount",
      "__MeaId__": "leftCount",
      "__MeaName__": "leftCount",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "leftCount": 5,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "goalProfit",
      "__Dim_Color__": 40,
      "__Dim_Detail__": "A-salesCount",
      "__Dim_X__": "2023",
      "__Dim_Y__": "A-salesCount",
      "__MeaId__": "salesCount",
      "__MeaName__": "salesCount",
      "__MeaValue__": 500,
      "__OriginalData__": {
        "date": "2023",
        "goalProfit": 40,
        "leftCount": 5,
        "profit": 40,
        "sales": 500,
        "salesCount": 500,
        "type": "A",
      },
      "date": "2023",
      "salesCount": 500,
      "type": "A",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "goalProfit": "goalProfit",
          "leftCount": "leftCount",
          "profit": "profit",
          "sales": "sales",
          "salesCount": "salesCount",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": 50,
          "colorMin": 10,
          "count": 25,
          "max": 500,
          "min": 1,
          "sum": 3295,
        },
      },
      "id": "heatmap",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {},
        "colorItems": [],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "type",
      "id": "type",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "color": [
      "goalProfit",
    ],
    "column": [],
    "detail": [
      "type",
      "__MeaName__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
      "type",
    ],
    "x": [
      "date",
    ],
    "y": [
      "type",
      "__MeaName__",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "goalProfit",
      "id": "goalProfit",
    },
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "leftCount",
      "id": "leftCount",
    },
    {
      "alias": "salesCount",
      "id": "salesCount",
    },
  ],
}
`;

exports[`simpleHeatmap 2`] = `
{
  "animation": true,
  "axes": [
    {
      "bandPadding": 0,
      "orient": "left",
      "type": "band",
    },
    {
      "bandPadding": 0,
      "orient": "bottom",
      "type": "band",
    },
  ],
  "background": "transparent",
  "cell": {
    "style": {
      "fill": {
        "field": "__Dim_Color__",
        "scale": "color",
      },
      "lineWidth": 1,
      "shape": "rect",
      "stroke": "#fff",
      "visible": [Function],
    },
  },
  "color": {
    "domain": [
      {
        "dataId": "heatmap",
        "fields": [
          "__Dim_Color__",
        ],
      },
    ],
    "range": [
      "#C2CEFF",
      "#5766EC",
    ],
    "type": "linear",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "heatmap",
    "values": [
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 10,
        "__Dim_Detail__": "A-goalProfit",
        "__Dim_X__": "2019",
        "__Dim_Y__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "goalProfit": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 10,
        "__Dim_Detail__": "A-profit",
        "__Dim_X__": "2019",
        "__Dim_Y__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 10,
        "__Dim_Detail__": "A-sales",
        "__Dim_X__": "2019",
        "__Dim_Y__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "sales": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 10,
        "__Dim_Detail__": "A-leftCount",
        "__Dim_X__": "2019",
        "__Dim_Y__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "leftCount": 1,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 10,
        "__Dim_Detail__": "A-salesCount",
        "__Dim_X__": "2019",
        "__Dim_Y__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "goalProfit": 10,
          "leftCount": 1,
          "profit": 10,
          "sales": 100,
          "salesCount": 100,
          "type": "A",
        },
        "date": "2019",
        "salesCount": 100,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-goalProfit",
        "__Dim_X__": "2020",
        "__Dim_Y__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-profit",
        "__Dim_X__": "2020",
        "__Dim_Y__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-sales",
        "__Dim_X__": "2020",
        "__Dim_Y__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 320,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "sales": 320,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-leftCount",
        "__Dim_X__": "2020",
        "__Dim_Y__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "leftCount": 2,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-salesCount",
        "__Dim_X__": "2020",
        "__Dim_Y__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 200,
        "__OriginalData__": {
          "date": "2020",
          "goalProfit": 30,
          "leftCount": 2,
          "profit": 30,
          "sales": 320,
          "salesCount": 200,
          "type": "A",
        },
        "date": "2020",
        "salesCount": 200,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-goalProfit",
        "__Dim_X__": "2021",
        "__Dim_Y__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "goalProfit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-profit",
        "__Dim_X__": "2021",
        "__Dim_Y__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "profit": 30,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-sales",
        "__Dim_X__": "2021",
        "__Dim_Y__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "sales": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-leftCount",
        "__Dim_X__": "2021",
        "__Dim_Y__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "leftCount": 3,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 30,
        "__Dim_Detail__": "A-salesCount",
        "__Dim_X__": "2021",
        "__Dim_Y__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 300,
        "__OriginalData__": {
          "date": "2021",
          "goalProfit": 30,
          "leftCount": 3,
          "profit": 30,
          "sales": 300,
          "salesCount": 300,
          "type": "A",
        },
        "date": "2021",
        "salesCount": 300,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 50,
        "__Dim_Detail__": "A-goalProfit",
        "__Dim_X__": "2022",
        "__Dim_Y__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "goalProfit": 50,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 50,
        "__Dim_Detail__": "A-profit",
        "__Dim_X__": "2022",
        "__Dim_Y__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "profit": 50,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 50,
        "__Dim_Detail__": "A-sales",
        "__Dim_X__": "2022",
        "__Dim_Y__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 240,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "sales": 240,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 50,
        "__Dim_Detail__": "A-leftCount",
        "__Dim_X__": "2022",
        "__Dim_Y__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "leftCount": 4,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 50,
        "__Dim_Detail__": "A-salesCount",
        "__Dim_X__": "2022",
        "__Dim_Y__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 400,
        "__OriginalData__": {
          "date": "2022",
          "goalProfit": 50,
          "leftCount": 4,
          "profit": 50,
          "sales": 240,
          "salesCount": 400,
          "type": "A",
        },
        "date": "2022",
        "salesCount": 400,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 40,
        "__Dim_Detail__": "A-goalProfit",
        "__Dim_X__": "2023",
        "__Dim_Y__": "A-goalProfit",
        "__MeaId__": "goalProfit",
        "__MeaName__": "goalProfit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "goalProfit": 40,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 40,
        "__Dim_Detail__": "A-profit",
        "__Dim_X__": "2023",
        "__Dim_Y__": "A-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "profit": 40,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 40,
        "__Dim_Detail__": "A-sales",
        "__Dim_X__": "2023",
        "__Dim_Y__": "A-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "sales": 500,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 40,
        "__Dim_Detail__": "A-leftCount",
        "__Dim_X__": "2023",
        "__Dim_Y__": "A-leftCount",
        "__MeaId__": "leftCount",
        "__MeaName__": "leftCount",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "leftCount": 5,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "goalProfit",
        "__Dim_Color__": 40,
        "__Dim_Detail__": "A-salesCount",
        "__Dim_X__": "2023",
        "__Dim_Y__": "A-salesCount",
        "__MeaId__": "salesCount",
        "__MeaName__": "salesCount",
        "__MeaValue__": 500,
        "__OriginalData__": {
          "date": "2023",
          "goalProfit": 40,
          "leftCount": 5,
          "profit": 40,
          "sales": 500,
          "salesCount": 500,
          "type": "A",
        },
        "date": "2023",
        "salesCount": 500,
        "type": "A",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": true,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "legends": {
    "customFilter": [Function],
    "field": "__Dim_Color__",
    "handlerText": {
      "style": {
        "fill": "#646A73",
        "fontSize": 12,
        "fontWeight": 400,
      },
      "visible": true,
    },
    "maxWidth": "30%",
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "color",
    "visible": true,
  },
  "padding": 0,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "tooltip": {
    "dimension": {
      "visible": false,
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "heatmap",
  "valueField": "__MeaValue__",
  "xField": "__Dim_X__",
  "yField": "__Dim_Y__",
}
`;

exports[`simpleHeatmap 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {},
  "colorItems": [],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
